--- a/WebProjeKerem/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebProjeKerem/Views/Shared/_LayoutAdmin.cshtml
@@ -46,7 +46,7 @@
             <!-- Logo -->
             <a href="index2.html" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>A</b>LT</span>
+                <span class="logo-mini"><b>A</b>P</span>
                 <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg"><b>Admin</b>Panel</span>
             </a>
@@ -67,10 +67,10 @@
                             <ul class="dropdown-menu">
                                 <li class="header">You have 4 messages</li>
                                 <li>
-                                    <!-- inner menu: contains the actual data -->
+                                     @*inner menu: contains the actual data*@ 
                                     <ul class="menu">
                                         <li>
-                                            <!-- start message -->
+                                             @*start message*@ 
                                             <a href="#">
                                                 <div class="pull-left">
                                                     <img src="/admin/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
@@ -81,7 +81,7 @@
                                                 </h4>
                                                 <p>Why not buy a new awesome theme?</p>
                                             </a>
-                                        </li><!-- end message -->
+                                        </li> @*end message*@ 
                                         <li>
                                             <a href="#">
                                                 <div class="pull-left">
@@ -136,16 +136,16 @@
                             </ul>
                         </li>
                         <!-- Notifications: style can be found in dropdown.less -->
-                        <li class="dropdown notifications-menu">
+                        <!--<li class="dropdown notifications-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-bell-o"></i>
                                 <span class="label label-warning">10</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="header">You have 10 notifications</li>
-                                <li>
+                                <li>-->
                                     <!-- inner menu: contains the actual data -->
-                                    <ul class="menu">
+                                    <!--<ul class="menu">
                                         <li>
                                             <a href="#">
                                                 <i class="fa fa-users text-aqua"></i> 5 new members joined today
@@ -175,21 +175,21 @@
                                 </li>
                                 <li class="footer"><a href="#">View all</a></li>
                             </ul>
-                        </li>
+                        </li>-->
                         <!-- Tasks: style can be found in dropdown.less -->
-                        <li class="dropdown tasks-menu">
+                        <!--<li class="dropdown tasks-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-flag-o"></i>
                                 <span class="label label-danger">9</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="header">You have 9 tasks</li>
-                                <li>
+                                <li>-->
                                     <!-- inner menu: contains the actual data -->
-                                    <ul class="menu">
-                                        <li>
+                                    <!--<ul class="menu">
+                                        <li>-->
                                             <!-- Task item -->
-                                            <a href="#">
+                                            <!--<a href="#">
                                                 <h3>
                                                     Design some buttons
                                                     <small class="pull-right">20%</small>
@@ -200,10 +200,10 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                        </li><!-- end task item -->
-                                        <li>
+                                        </li>--><!-- end task item -->
+                                        <!--<li>-->
                                             <!-- Task item -->
-                                            <a href="#">
+                                            <!--<a href="#">
                                                 <h3>
                                                     Create a nice theme
                                                     <small class="pull-right">40%</small>
@@ -214,10 +214,10 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                        </li><!-- end task item -->
-                                        <li>
+                                        </li>--><!-- end task item -->
+                                        <!--<li>-->
                                             <!-- Task item -->
-                                            <a href="#">
+                                            <!--<a href="#">
                                                 <h3>
                                                     Some task I need to do
                                                     <small class="pull-right">60%</small>
@@ -228,10 +228,10 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                        </li><!-- end task item -->
-                                        <li>
+                                        </li>--><!-- end task item -->
+                                        <!--<li>-->
                                             <!-- Task item -->
-                                            <a href="#">
+                                            <!--<a href="#">
                                                 <h3>
                                                     Make beautiful transitions
                                                     <small class="pull-right">80%</small>
@@ -242,14 +242,14 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                        </li><!-- end task item -->
-                                    </ul>
+                                        </li>--><!-- end task item -->
+                                    <!--</ul>
                                 </li>
                                 <li class="footer">
                                     <a href="#">View all tasks</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>-->
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -258,15 +258,15 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
-                                <li class="user-header">
+                                <!--<li class="user-header">
                                     <img src="/admin/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     <p>
                                         Alexander Pierce - Web Developer
                                         <small>Member since Nov. 2012</small>
                                     </p>
-                                </li>
+                                </li>-->
                                 <!-- Menu Body -->
-                                <li class="user-body">
+                                <!--<li class="user-body">
                                     <div class="col-xs-4 text-center">
                                         <a href="#">Followers</a>
                                     </div>
@@ -276,14 +276,14 @@
                                     <div class="col-xs-4 text-center">
                                         <a href="#">Friends</a>
                                     </div>
-                                </li>
+                                </li>-->
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
-                                    <div class="pull-left">
+                                    @*<div class="pull-left">
                                         <a href="#" class="btn btn-default btn-flat">Profile</a>
-                                    </div>
+                                    </div>*@
                                     <div class="pull-right">
-                                        <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                        <a href="/Account/Logout" class="btn btn-default btn-flat">Çıkış Yap</a>
                                     </div>
                                 </li>
                             </ul>
@@ -332,10 +332,9 @@
                             <li><a href="/Admin/GetUsers"><i class="fa fa-circle-o"></i> Kullanıcılar</a></li>
                         </ul>
                     </li>
-                    <li class="header">Menü 2</li>
-                    <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>İçerik 1</span></a></li>
-                    <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>İçerik 2</span></a></li>
-                    <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>İçerik 3</span></a></li>
+                    <li class="header">Döviz</li>
+                    <li><a href="/Admin/GetCurrency"><i class="fa fa-circle-o text-red"></i> <span>Döviz Kurları</span></a></li>
+                    <li><a href="/Admin/GetGoldPrices"><i class="fa fa-circle-o text-yellow"></i> <span>Altın Fiyatları</span></a></li>
                 </ul>
             </section>
             <!-- /.sidebar -->
